fixed the button alignment on the about.html

--- a/css/index.css
+++ b/css/index.css
@@ -405,10 +405,10 @@ header {
 /* buttons */
 
 button {
-    margin: 20px 10px;
+    margin: 20px 0px;
     width: 125px;
     border: 2px solid black;
-    padding: 10px;
+    padding: 10px 0;
     border-radius: 10px;
     color: black;
     text-decoration: none;background-color: white;
